making dynamic profileimage

--- a/web/profile_1.xhtml
+++ b/web/profile_1.xhtml
@@ -37,7 +37,7 @@
                     <div class="user">
                         <div class ="profilepic">
                             <center>
-                                <p:graphicImage value="#{mediaController.image}" height="80px" width="80px" />
+                                <p:graphicImage value="#{mediaController.profileImage}" height="100px" width="100px" />
                             </center>
                         </div>
                         <center>
