--- a/web/profileStudent.xhtml
+++ b/web/profileStudent.xhtml
@@ -42,7 +42,7 @@
                             <div class="user">
                                 <div class ="profilepic">
                                     <center>
-                                        <h:graphicImage value="resources/images/default-profile.png" height="80px" width="80px" />
+                                        <p:graphicImage value="resources/images/default-profile.png" height="80px" width="80px" />
                                     </center>
                                 </div>
                                 <center>
