--- a/web/profileRecFriend.xhtml
+++ b/web/profileRecFriend.xhtml
@@ -125,14 +125,14 @@
             </aside>
             <aside2>
                 <h3> 
-                <h:outputText value="#{profileController.userName}"></h:outputText>
+                <h:outputText value="#{searchController.userName}"></h:outputText>
                 's Detailed Info</h3>
                 <br/>
-                <h:outputText value="#{profileController.department}"></h:outputText>
+                <h:outputText value="#{searchController.department}"></h:outputText>
                 <br/>
-                <h:outputText value="#{profileController.university}"></h:outputText>
+                <h:outputText value="#{searchController.university}"></h:outputText>
                 <br/>
-                <h:outputText value="#{profileController.phone}"></h:outputText>
+                <h:outputText value="#{searchController.phone}"></h:outputText>
                 <br/>                
                 <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton>   
             </aside2>
