--- a/web/profileRec.xhtml
+++ b/web/profileRec.xhtml
@@ -128,10 +128,13 @@
                 <h:outputText value="#{profileController.userName}"></h:outputText>
                 's Detailed Info</h3>
                 <br/>
+                <u><b>Department: </b></u>
                 <h:outputText value="#{profileController.department}"></h:outputText>
                 <br/>
+                <u><b>University: </b></u>
                 <h:outputText value="#{profileController.university}"></h:outputText>
                 <br/>
+                <u><b>Phone: </b></u>
                 <h:outputText value="#{profileController.phone}"></h:outputText>
                 <br/>                
                 <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton>   
