--- a/web/profileStudentFriend.xhtml
+++ b/web/profileStudentFriend.xhtml
@@ -129,37 +129,37 @@
                 <h:outputText value="#{searchController.userName}"></h:outputText>
                 's Detailed Info</h3>
                 <br/>
-                <b>Date of Birth:</b>
+                <u><b>Date of Birth:</b></u>
                 <h:outputText value="#{searchController.DOB}"></h:outputText>
                 <br/>    
-                <b>Height:</b>
+                <u><b>Height:</b></u>
                 <h:outputText value="#{searchController.height}"></h:outputText>
                 <br/>
-                <b>Weight:</b>
+                <u><b>Weight:</b></u>
                 <h:outputText value="#{searchController.weight}"></h:outputText>
                 <br/>
-                <b>Country:</b>
+                <u><b>Country:</b></u>
                 <h:outputText value="#{searchController.country}"></h:outputText>
                 <br/>
-                <b>Current School:</b>
+                <u><b>Current School:</b></u>
                 <h:outputText value="#{searchController.school}"></h:outputText>
                 <br/>
-                <b>Graduation Year:</b>
+                <u><b>Graduation Year:</b></u>
                 <h:outputText value="#{searchController.endYear}"></h:outputText>
                 <br/>
-                <b>SAT:</b>
+                <u><b>SAT:</b></u>
                 <h:outputText value="#{searchController.SAT}"></h:outputText>
                 <br/>
-                <b>ACT:</b>
+                <u><b>ACT:</b></u>
                 <h:outputText value="#{searchController.ACT}"></h:outputText>
                 <br/>
-                <b>PSAT:</b>
+                <u><b>PSAT:</b></u>
                 <h:outputText value="#{searchController.PSAT}"></h:outputText>
                 <br/>
-                <b>Certifications:</b>
+                <u><b>Certifications:</b></u>
                 <h:outputText value="#{searchController.certifications}"></h:outputText>
                 <br/>
-                <b>Hobbies:</b>
+                <u><b>Hobbies:</b></u>
                 <h:outputText value="#{searchController.hobbies}"></h:outputText>
                 <br/>
                 <br/>
