Post and comments in a working state

--- a/web/resetPassword.xhtml
+++ b/web/resetPassword.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-         xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
         <title></title>
         <h:outputStylesheet library="css" name="signup.css"/>
@@ -33,7 +34,10 @@
                                         value="#{passwordResetController.targetUser.password}" 
                                         required="true" />
                             <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" action="#{passwordResetController.updateUser()}"></h:commandButton>
-                        </h:form>   
+                        </h:form> 
+                        <f:metadata>
+                            <f:viewParam name="id" value ="#{passwordResetController.emailId}" required="false"/>
+                        </f:metadata> 
                     </div>
                 </div>
             </article>
