email subscription and unsubscription

--- a/web/profile.xhtml
+++ b/web/profile.xhtml
@@ -126,7 +126,11 @@
                 <br/>
                 Contact info?
                 <br/>
-                <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton>   
+                <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton> 
+                <br/><br/>
+                <h:form>
+                <h:commandButton class="sidebarbutton" value="Unsubscribe to Email" action="#{updateController.updateUsers()}"> </h:commandButton>  
+                </h:form>
             </aside2>
             <footer>LINKEDU LLC. Created By Eric, Akankshaw, Dryden and Ricky</footer>
         </div>
