rec friend changes

--- a/web/profileRecFriend.xhtml
+++ b/web/profileRecFriend.xhtml
@@ -128,10 +128,13 @@
                 <h:outputText value="#{searchController.userName}"></h:outputText>
                 's Detailed Info</h3>
                 <br/>
+                <u><b>Department: </b></u>
                 <h:outputText value="#{searchController.department}"></h:outputText>
                 <br/>
+                <u><b>University: </b></u>
                 <h:outputText value="#{searchController.university}"></h:outputText>
                 <br/>
+                <u><b>Phone </b></u>
                 <h:outputText value="#{searchController.phone}"></h:outputText>
                 <br/>                
                 <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton>   
