--- a/web/profileStudentFriend.xhtml
+++ b/web/profileStudentFriend.xhtml
@@ -99,7 +99,7 @@
             </feed>
         <aside>
                 <h:form id="sidebar">
-                    <h:commandButton  id="home" class="sidebarbutton" action="signUp?faces-redirect=true" value="Home" ></h:commandButton>
+                    <h:commandButton  id="home" class="sidebarbutton" action="profileStudent?faces-redirect=true" value="Home" ></h:commandButton>
                     <br/>
                     <br/>
                     <h:commandButton  id="search" class="sidebarbutton" action="searchResults?faces-redirect=true" value="Search" ></h:commandButton>
