console logs cleaned up

--- a/web/profileStudent.xhtml
+++ b/web/profileStudent.xhtml
@@ -95,8 +95,8 @@
                             <br/>
                             Illinois State University
                         </i></b>
-                    <p:galleria value="#{showcaseUniversityController.images}" var="image" panelWidth="250" panelHeight="180">
-                        <p:graphicImage value="resources/images/#{image}" title="#{image}"/>
+                    <p:galleria value="#{showcaseUniversityController.images}" var="image" panelWidth="255" panelHeight="180">
+                        <p:graphicImage value="resources/images/#{image}" style=""  title="#{image}"/>
                     </p:galleria>
                 </h:form>
             </aside>
@@ -142,7 +142,7 @@
                 <br/>
                 <br/>
             </aside2>
-            <footer>LINKEDU LLC. Created By Eric, Akankshaw, Dryden and Ricky</footer>
+            <footer>LINKEDU LLC. Created By Eric, Akanksha, Dryden and Ricky</footer>
         </div>
     </h:body>
 </html>
