--- a/web/SearchResults.xhtml
+++ b/web/SearchResults.xhtml
@@ -10,7 +10,7 @@
     <h:body>
         <h:form>
             <p:dataList value="#{searchController.results}" var="user" >
-                <p:commandLink action="#{profileController.profilePage()}" ajax="false">
+                <p:commandLink action="#{searchController.getProfile()}" ajax="false">
                     <h:outputText value="#{user.toString()}" />
                 </p:commandLink>
             </p:dataList>
